# NES

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  LICENSE
cmake/: base.cmake  compilers.cmake  debug.cmake  libraries.cmake  warnings.cmake
include/: Bus.hpp  CPU.hpp  Mapper.hpp  Rom.hpp  types.hpp
include/common/: BitField.hpp  log.h  types.h  types.hpp  utils.h
include/emu/: cpu.h  opcodes.h
include/mapper/: MapperNROM.hpp
include/nes/: Bus.hpp  CPU.hpp  Cartridge.hpp  Mapper.hpp
include/nes/mapper/: MapperNROM.hpp  NROM.hpp
src/: Bus.cpp  CPU.cpp  Cartridge.cpp  Mapper.cpp  Rom.cpp  main.c  main.cpp
src/common/: log.c  utils.c
src/emu/: cpu.c  opcode.c  opcodes.c
src/mapper/: MapperNROM.cpp
src/nes/: Bus.cpp  CPU.cpp  Cartridge.cpp  Mapper.cpp
src/nes/mapper/: MapperNROM.cpp  NROM.cpp
test/: Makefile  ines.cfg  ines_header.i  rom.s
test/include/: ppu.inc
test/src/: boot.s  main.s  rom.s
